--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.9.1
+bleach==6.2.0
 dj-database-url==0.5.0
 Django==4.2.23
 gunicorn==20.1.0
@@ -7,4 +8,5 @@ psycopg2==2.9.10
 setuptools==80.9.0
 sqlparse==0.5.3
 tzdata==2025.2
+webencodings==0.5.1
 whitenoise==6.9.0
